2008-09-17  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailerUI/UIxMailAccountActions.m ([WOResponse
	-listMailboxesAction]): also returns the inbox quota, wrapped in a
	new dictionary with keys "mailboxes" and "quotas". Uses the new user
	default "SOGoSoftQuota" to force a quota and ignore the one
	returned by the IMAP server.

2008-09-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-fetchAttachmentIds]): if the parts have no filename associated
	with them, we still return the prefix url so that we still can
	access the attachment from HTML messages.

2008-09-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	log the username performing the logoff operation.

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -connectAction]): log
	success information about current attempt.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-lookupName:lookupNameinContext:localContextacquire:acquire]): do
	not use the object returned by "bindToObject:inContext:".
	Otherwise the clientObject isn't set in the context.

2008-09-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartAlternativeViewer.m
	([UIxMailPartAlternativeViewer -selectChildInfo]): give precedence
	on multipart/mixed parts over text/* parts.

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-isValidAttachmentName:filename]): accept all filenames except
	".", ".." and those that contain "/". Any other is valid and will
	be accepted.

2008-09-08  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* SoObjects/SOGo/LDAPSource.m ([LDAPSource
	-checkLogin:loginToCheckandPassword:passwordToCheck])	
	([LDAPSource -allEntryIDs])	
	([LDAPSource -fetchContactsMatching:match])
	([LDAPSource -lookupContactEntry:entryID])
	([LDAPSource -lookupContactEntryWithUIDorEmail:uid]): catch any
	LDAP connection failure exception and return an empty result if
	such as situation has happened.
